src/objects/CM_Patient__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of patient. Calucation takes into account also leap years.</description>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encrypted>true</encrypted>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Expiration_Date__c</fullName>
        <label>PAN Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAN_Status__c</fullName>
        <label>PAN Status</label>
        <picklist>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expires within 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No PAN on File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Second Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Patient</label>
   <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAT-{0000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>